--- a/manager/src/main/res/layout/activity_add_icons.xml
+++ b/manager/src/main/res/layout/activity_add_icons.xml
@@ -63,6 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             app:backgroundTint="@color/colorPrimaryDark"
+            android:textColor="@color/white"
             app:cornerRadius="@dimen/radius_default"
             android:padding="@dimen/padding_default"
             android:text="Salvar ícones" />
