--- a/app/src/main/res/drawable/ic_add_outline.xml
+++ b/app/src/main/res/drawable/ic_add_outline.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:tint="?android:textColorPrimary"
+    android:tint="@color/white"
     android:autoMirrored="true"
     android:viewportWidth="477.867"
     android:viewportHeight="477.867">
