--- a/app/src/main/res/layout/profilepicselect_.xml
+++ b/app/src/main/res/layout/profilepicselect_.xml
@@ -20,6 +20,18 @@
             android:background="@drawable/gradient_animation"
             android:backgroundTint="?colorPrimaryDark" />
 
+        <ImageView
+            android:id="@+id/covers_gif_mark"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:layout_marginVertical="@dimen/margin_small"
+            android:scaleType="fitCenter"
+            android:src="@drawable/giphy_color"
+            android:visibility="gone"
+            app:tint="?android:textColorPrimary"
+            tools:visibility="visible" />
+
         <TextView
             android:id="@+id/dialog_title"
             android:padding="@dimen/padding_default"
@@ -28,6 +40,7 @@
             tools:text="Escolher ícone de perfil"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_below="@id/dialog_title"
