--- a/app/src/main/res/layout/users_page_card.xml
+++ b/app/src/main/res/layout/users_page_card.xml
@@ -23,8 +23,11 @@
             android:layout_marginTop="?attr/actionBarSize"
             android:background="@color/transparent"
             android:padding="@dimen/padding_default"
+            android:fontFamily="@font/questrial"
+            android:gravity="center"
             android:text="Usuários para acompanhar"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             android:textColor="@color/white"
             android:textStyle="bold" />
 
