--- a/base/src/main/res/layout/motiv_toolbar.xml
+++ b/base/src/main/res/layout/motiv_toolbar.xml
@@ -7,20 +7,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <View
-            android:id="@+id/topBlur"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/topBlurSize"
-            android:background="@drawable/fade_gradient" />
-
         <androidx.appcompat.widget.Toolbar
-            android:layout_marginTop="@dimen/padding_big"
             android:gravity="center"
+            android:layout_marginTop="@dimen/statusBarHeight"
             android:id="@+id/motiv_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:titleTextColor="@color/white"
             android:theme="@style/AppToolbar"
-            app:title="@string/app_name" />
+            app:title=" " />
+
+        <RelativeLayout
+            android:id="@+id/titleView"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_marginTop="@dimen/statusBarHeight">
+
+            <TextView
+                android:id="@+id/motivTitle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:maxLength="50"
+                android:maxLines="1"
+                android:text="@string/app_name"
+                android:textAppearance="@style/ToolbarTitle"
+                android:textColor="@color/white" />
+        </RelativeLayout>
+
     </RelativeLayout>
 </layout>
