--- a/base/src/main/res/layout/style_pager_layout.xml
+++ b/base/src/main/res/layout/style_pager_layout.xml
@@ -8,12 +8,30 @@
     </data>
 
 
-    <ImageView
-        android:id="@+id/styleGif"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:background="?android:textColorHint"
         android:layout_height="match_parent"
-        android:scaleType="center" />
+        android:background="?attr/dividerColor">
+
+        <ImageView
+            android:id="@+id/styleGif"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="?android:textColorHint"
+            android:scaleType="center" />
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:scaleType="fitCenter"
+            android:src="@drawable/giphy_mark" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/oblack" />
+    </RelativeLayout>
 
 
 </layout>
