--- a/base/src/main/res/values/dimens.xml
+++ b/base/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="low_quote_size">16sp</dimen>
     <dimen name="min_quote_size">12sp</dimen>
     <dimen name="topBlurSize">80dp</dimen>
+    <dimen name="statusBarHeight">25dp</dimen>
 </resources>
