--- a/base/src/main/res/values/themes.xml
+++ b/base/src/main/res/values/themes.xml
@@ -25,7 +25,7 @@
         <item name="android:fitsSystemWindows">false</item>
         <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">?android:colorBackground</item>
+        <item name="android:navigationBarColor">@color/transparent</item>
 
     </style>
 
