--- a/base/src/main/res/layout/quotes_card.xml
+++ b/base/src/main/res/layout/quotes_card.xml
@@ -6,6 +6,8 @@
 
 
     <RelativeLayout
+        android:visibility="gone"
+        tools:visibility="visible"
         android:id="@+id/quoteCard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
