--- a/app/src/main/res/layout/radio_page_layout.xml
+++ b/app/src/main/res/layout/radio_page_layout.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Motiv"
+        android:gravity="center|start"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
         android:transitionName="@string/style_text_transtition" />
 </layout>
