--- a/base/src/main/res/layout/style_layout_view.xml
+++ b/base/src/main/res/layout/style_layout_view.xml
@@ -10,6 +10,8 @@
 
         <ImageView
             android:id="@+id/quoteBack"
+            android:visibility="gone"
+            tools:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="?attr/dividerColor"
