--- a/base/src/main/res/layout/style_pager_layout.xml
+++ b/base/src/main/res/layout/style_pager_layout.xml
@@ -17,7 +17,7 @@
             android:id="@+id/styleGif"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?android:textColorHint"
+            android:background="?attr/dividerColor"
             android:scaleType="center" />
 
         <ImageView
