--- a/base/src/main/res/layout/user_quote_card_view.xml
+++ b/base/src/main/res/layout/user_quote_card_view.xml
@@ -13,6 +13,7 @@
 
 
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/userContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
