--- a/manager/src/main/res/layout/activity_manager.xml
+++ b/manager/src/main/res/layout/activity_manager.xml
@@ -22,23 +22,13 @@
         app:labelVisibilityMode="unlabeled"
         app:menu="@menu/bottom_nav_menu" />
 
-    <com.google.android.material.card.MaterialCardView
+
+    <FrameLayout
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/nav_view"
-        android:animateLayoutChanges="true"
-        app:cardCornerRadius="@dimen/radius_default"
-        app:cardElevation="0dp">
-
-        <fragment
-            android:id="@+id/nav_host_fragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@id/nav_view"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/mobile_navigation" />
-    </com.google.android.material.card.MaterialCardView>
+        android:layout_above="@id/nav_view" />
 
     <include layout="@layout/blur_layout" />
 
